# audio-transcription_Kt.ZH

./: .env_example  .gitignore  README.md  compose.yaml  dockerfile  main.py  pyproject.toml  requirements.txt  run_gui.bat  run_transcribo.bat  run_worker.bat  startup.sh  worker.py
data/: bootstrap_content.txt  const.py  logo.txt
src/: help.py  srt.py  transcription.py  util.py  viewer.py
